--- a/oly.html
+++ b/oly.html
@@ -57,7 +57,8 @@
     <div style="padding-top: 20vh;"></div>
     <!-- <div class="desc">The<br>Bla<span style=" display: inline-block; transform:  scaleX(-1); background-color: white; color:black">c</span>k<br>Record</div> -->
     <div class="desc">EDDY<br>MUSiC<br>LABEL</div>
-    <div style="font-size: x-large; padding: 3vh 10vw 3vh; color:white;">By <a style="color:white;" href="https://khentmt.com">KH Entertainment</a></div>
+    <div style="font-size: x-large; padding: 3vh 10vw 3vh; color:white;">By <a style="color:white;" href="zune.html">KH Entertainment</a></div>
     <div class="desc"><a href="#">About</a><br><a href="#">Details</a><br><a href="#">Enroll</a></div>
+    
 </body>
 </html>
