--- a/grd.html
+++ b/grd.html
@@ -13,6 +13,11 @@
           src: url('fonts/ere.otf');
       }
 
+      @font-face {
+          font-family: 'cas'; 
+          src: url('fonts/iom.otf');
+      }
+
         canvas {
             width: 100%;
             height: 35vh; /* Fixed height or based on screen size */
@@ -32,24 +37,10 @@
             font-family: ere;
         }
 
-        .summary-container {
-            display: inline-block;
-            padding-right: 3vw;
-            vertical-align: top;
-            width: auto;
-            padding-bottom: 5vh;
+        summary:hover{
+            cursor: pointer;
         }
-        details {
-            width: 100%; /* Adjust the width as needed */
-        }
-        summary {
-            line-height: 1.5; /* Ensure this matches the line height of the content */
-            height: 1.5em; /* Same as line height to align the first line */
-            /* display: block; */
-        }
-        details[open] summary {
-            height: auto; /* Reset height when open */
-        }
+
     </style>
 </head>
 <body>
@@ -73,16 +64,15 @@
     </form>
     <br>
     <p id="finalValue">Final Value (rounded): </p>
-    <canvas id="graphCanvas" width="2400" height="1600" style="border:2px solid #000000;"></canvas>
+    <canvas id="graphCanvas" width="2400" height="1600" style="border:2px solid #000000; width: 80vw;"></canvas>
 <p>    See how your money will eventually go to zero in the long run, even though the mathematical expectation of change in money is 0, somewhat meaning you should at least get your base back in the end.
 </p>
 
 
 <div>
-    <div class="summary-container">
-        <details>
-            <summary>Learn how this simulation works</summary>
-        <span style="width: 100px;">This setup mimics a random walk process for a gambling game. Before everything, 3 values are initialized:<br>
+        <details style="padding-bottom: 3vh;">
+            <summary><b>Learn how this simulation works</b></summary>
+        <div>This setup mimics a random walk process for a gambling game. Before everything, 3 values are initialized:<br>
             <b>1.</b> "base" is initilaized to 10000, which represents gambler's starting money.<br>
             <b>2.</b> "rate" is initilaized to 0.5, which determines the maximum relative change (positive or negative) that can occur in each step of the random walk.<br> 
             <b>3.</b> "period" is initilaized to 365, which represents the number of steps or days in the simulation, in this case, default is 1 year.<br>
@@ -91,13 +81,12 @@
             then  value is then updated by multiplying it with a random value chosen from either 1-"rate" (go down) or 1+"rate" (go up), which simulates the random walk process.
             <br>
             Then the will display the final money gambler has at the end of the period and plot out the how gambler's money changed using html canvas.
-        </span>    
+        </div>    
         </details>
-    </div>
-    <div class="summary-container">
-        <details>
-            <summary>Get python code</summary>
-            <pre style="font-size: small; border: darkblue solid 2px;">
+
+        <details style="padding-bottom: 3vh;">
+            <summary><b>Get python code</b></summary>
+            <pre style=" font-size: xx-small;  font-family:cas ;border: rgb(52, 52, 52) solid 2px; width: 80vw;">
 import numpy as np
 import matplotlib.pyplot as plt
 base=10000
@@ -111,7 +100,6 @@ print(seq[-1])
 plt.plot(seq)
 </pre>
         </details>
-    </div>
 </div>
 
 <script>
