--- a/proj.html
+++ b/proj.html
@@ -8,6 +8,11 @@
     <style>
         @font-face { font-family: soh; src: url("fonts/sohne.otf"); } 
         @font-face { font-family: sig; src: url("fonts/sig.otf"); } 
+        @font-face {
+          font-family: 'sfr'; 
+          src: url('fonts/sf-round.otf');
+      }
+
     body{
         padding-bottom: 10vh;
         font-family:soh;
@@ -101,10 +106,30 @@
         content: "-";
         } */
 
+        .fixed-back-link {
+            position: fixed;
+            bottom: 5%;
+            right: 5%;
+            /* background-color: grey;
+            color: black;
+            padding: 10px 20px; */
+            border-radius: 999px;
+            font-family: sfr;
+            font-size: xx-large;
+            text-decoration: none;
+            z-index: 1000;
+            fill:lightgray;
+            transition: 0.5s;
+        }
+        .fixed-back-link:hover {
+            fill:black;
+        }
     </style>
 </head>
 <body>
     <p style="font-size: xx-large; font-family:sig; padding-left: 5vw;">projects</p>
+    <a href="javascript:history.back()" ><svg class="fixed-back-link" height="8vh" 
+        width="8vh" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" stroke="#808080" stroke-width="0.00512"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M384,277.333H179.499 l48.917,48.917c8.341,8.341,8.341,21.824,0,30.165c-4.16,4.16-9.621,6.251-15.083,6.251c-5.461,0-10.923-2.091-15.083-6.251 l-85.333-85.333c-1.963-1.963-3.52-4.309-4.608-6.933c-2.155-5.205-2.155-11.093,0-16.299c1.088-2.624,2.645-4.971,4.608-6.933 l85.333-85.333c8.341-8.341,21.824-8.341,30.165,0s8.341,21.824,0,30.165l-48.917,48.917H384c11.776,0,21.333,9.557,21.333,21.333 S395.776,277.333,384,277.333z"></path> </g> </g> </g></svg></a>
 
     <div class="proj" >
         <div class="thumbnail">
@@ -138,6 +163,26 @@
             <a style="font-size: small;" href="https://aqmn.github.io/cmd">Explore</a>
         </div>
     </div>
+
+    <div class="proj">
+        <div class="thumbnail">
+            <img src="assets/gam.jpg">
+        </div>
+        <div class="desc">
+            <p style="font-size: large;">Gambler's Ruin</p>
+            <!-- This is a world of stochastic simulations!  -->
+            In this digital playground, the abstract dance of probabilities comes to life, 
+            showcasing the delicate balance of fortune and risk. 
+            Watch as the threads of fate weave through peaks and nadirs, where a stories,
+            and simulations are told and used to reveal the hidden patterns of seeming randomness.
+
+            
+            <br>
+            <br>
+            <a style="font-size: small;" href="grd.html">Explore</a>
+        </div>
+    </div>
+
 
     <div class="proj">
         <div class="thumbnail">
