--- a/proj.html
+++ b/proj.html
@@ -53,7 +53,7 @@
     }
 
     .thumbnail {
-        width: 20vw; /* Width of thumbnail in landscape */
+        width: 25vw; /* Width of thumbnail in landscape */
         padding-right: 10vw;
     }
 
@@ -124,12 +124,16 @@
         .fixed-back-link:hover {
             fill:black;
         }
+
+        img{
+            border-radius: 2vw;
+        }
     </style>
 </head>
 <body>
     <p style="font-size: xx-large; font-family:sig; padding-left: 5vw;">projects</p>
-    <a href="javascript:history.back()" ><svg class="fixed-back-link" height="8vh" 
-        width="8vh" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" stroke="#808080" stroke-width="0.00512"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M384,277.333H179.499 l48.917,48.917c8.341,8.341,8.341,21.824,0,30.165c-4.16,4.16-9.621,6.251-15.083,6.251c-5.461,0-10.923-2.091-15.083-6.251 l-85.333-85.333c-1.963-1.963-3.52-4.309-4.608-6.933c-2.155-5.205-2.155-11.093,0-16.299c1.088-2.624,2.645-4.971,4.608-6.933 l85.333-85.333c8.341-8.341,21.824-8.341,30.165,0s8.341,21.824,0,30.165l-48.917,48.917H384c11.776,0,21.333,9.557,21.333,21.333 S395.776,277.333,384,277.333z"></path> </g> </g> </g></svg></a>
+    <a href="javascript:history.back()" ><svg class="fixed-back-link" height="6vh" 
+        width="6vh" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" stroke="#808080" stroke-width="0.00512"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M384,277.333H179.499 l48.917,48.917c8.341,8.341,8.341,21.824,0,30.165c-4.16,4.16-9.621,6.251-15.083,6.251c-5.461,0-10.923-2.091-15.083-6.251 l-85.333-85.333c-1.963-1.963-3.52-4.309-4.608-6.933c-2.155-5.205-2.155-11.093,0-16.299c1.088-2.624,2.645-4.971,4.608-6.933 l85.333-85.333c8.341-8.341,21.824-8.341,30.165,0s8.341,21.824,0,30.165l-48.917,48.917H384c11.776,0,21.333,9.557,21.333,21.333 S395.776,277.333,384,277.333z"></path> </g> </g> </g></svg></a>
 
     <div class="proj" >
         <div class="thumbnail">
@@ -166,7 +170,7 @@
 
     <div class="proj">
         <div class="thumbnail">
-            <img src="assets/gam.jpg">
+            <img src="assets/gam.webp">
         </div>
         <div class="desc">
             <p style="font-size: large;">Gambler's Ruin</p>
