--- a/sm.html
+++ b/sm.html
@@ -4,8 +4,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="logo.png" type="image/png">
-    <style>
+    <!-- <link rel="icon" href="logo.png" type="image/png"> -->
+    <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
+<style>
         @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
     body{
@@ -105,7 +106,7 @@
 pre{ 
    /* white-space: pre-wrap; 
    word-break: break-word; */
-   line-height: 1.1;
+   line-height: .9;
 }
 
 .here{
