--- a/grd.html
+++ b/grd.html
@@ -59,7 +59,9 @@
         <input style="width:40vw" type="number" id="base" name="base" value="10000" required><br><br>
         <label for="rate">Rate (0~1):</label>
         <input style="width:40vw" type="number" id="rate" name="rate" step="0.01" value="0.5" required>
-        <a href="#how" onclick='setTimeout(function() {document.getElementById("how").setAttribute("open", "");}, 300)' style="border-radius: 99px; border: black 1px solid; padding: 2px 5.8px 0px; text-decoration: none; font-size: x-small; color:black;">i</a><br><br>
+        <!-- <a href="#how" onclick='setTimeout(function() {document.getElementById("how").setAttribute("open", "");}, 300)' style="border-radius: 99px; border: black 1px solid; padding: 2px 5.8px 0px; text-decoration: none; font-size: x-small; color:black;">i</a> -->
+        <a href="#how" onclick='setTimeout(function() {document.getElementById("how").setAttribute("open", "");}, 300)' style=" text-decoration: none; font-size: small; color:black;">ⓘ</a>
+        <br><br>
         <label for="period">Period (Days):</label>
         <input style="width:40vw" type="number" id="period" name="period" value="365" required><br><br>
         <button type="button" onclick="plotGraph()">Plot Graph</button>
@@ -85,7 +87,7 @@
          </div>    
 </details>
         <details id="how" style="padding-bottom: 3vh;">
-            <summary><b>Learn how this simulation works</b></summary>
+            <summary><b>Learn how the simulation behind works</b></summary>
         <div>This setup mimics a random walk process for a gambling game. Before everything, 3 values are initialized:<br>
             <b>1.</b> "base" is initilaized to 10000, which represents gambler's starting money.<br>
             <b>2.</b> "rate" is initilaized to 0.5, which determines the change in percentage (positive or negative) that can occur in each step of the random walk. In this case it's increase by 50% or decrease by 50%.<br> 
@@ -95,7 +97,8 @@
             then  value is then updated by multiplying it with a random value chosen from either 1-"rate" (go down) or 1+"rate" (go up), which simulates the random walk process.
             <br>
             Then the will display the final money gambler has at the end of the period and plot out the how gambler's money changed using html canvas.
-        </div>    
+        </div>  
+        <span id="how-end"></span>  
         </details>
 
         <details style="padding-bottom: 3vh;">
