--- a/nic.html
+++ b/nic.html
@@ -9,6 +9,7 @@
     @import url(https://db.onlinewebfonts.com/c/13ab13418f633c1b0516fed6e30bedbc?family=Suisse+Int%27l);
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Cutive+Mono&display=swap');
+    @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
     body{
         -webkit-user-select: none;
         -ms-user-select: none;
@@ -18,8 +19,8 @@
         text-align: center;
         color:white;
         font-size: 10vw;
-        /* font-family: "SuisseIntl-Bold"; */
-        font-family: "Cutive Mono", monospace;
+        font-family: "Diagramatika Text Bold";
+        /* font-family: "Cutive Mono", monospace; */
   font-weight: 400;
   font-style: normal;
     }
@@ -30,8 +31,7 @@
 </style>
 </head>
 <body>
-<div class="spin" id="spin" style="transition: 1s; cursor: pointer;" >
-    ZHO<span style="color:orangered">U</span><span style=" display: inline-block; transform:  scaleX(-1);">LINGY</span></div>
+<div class="spin" id="spin" style="transition: 1s; cursor: pointer;" >&nbsp;&nbsp;&nbsp;&nbsp;ZHO<span style="color:orangered">U</span><span style=" display: inline-block; transform:  scaleX(-1);">LINGY</span></div>
     <script>
             document.getElementById('spin').addEventListener('click', function() {
         this.classList.toggle('flipped');
