--- a/self.html
+++ b/self.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
     <title>lingyu zhou</title>
     <style>
-    @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
+    /* @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold); */
 
     @font-face {
-      font-family: neue;
-      src: url("fonts/nhm.ttf");
+      font-family: dtb;
+      src: url("fonts/dtb.ttf");
     }
     ::webkit-scrollbar {display: none}
     ::selection{background-color: white; color:black}
@@ -33,7 +33,7 @@
             color:white;
             margin:0px;
             /* font-family: neue; */
-            font-family: "Diagramatika Text Bold";
+            font-family: dtb;
             overflow-y: hidden;
         }
 
