--- a/me.html
+++ b/me.html
@@ -9,9 +9,10 @@
     @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
 
     @font-face {
-      font-family: neue;
-      src: url("fonts/nhm.ttf");
+      font-family: dtb;
+      src: url("fonts/dtb.ttf");
     }
+
     ::webkit-scrollbar {display: none}
     ::selection{background-color: white; color:black}
     a{
@@ -25,7 +26,7 @@
             color:white;
             margin:0px;
             /* font-family: neue; */
-            font-family: "Diagramatika Text Bold";
+            font-family: dtb;
             overflow-y: hidden;
         }
 
