--- a/grd.html
+++ b/grd.html
@@ -125,7 +125,7 @@
 
         <details style="padding-bottom: 3vh;">
             <summary><b>Get python code</b></summary>
-            <pre style=" font-size: xx-small;  font-family:cas ;border: rgb(52, 52, 52) solid 2px; width: 80vw;" translate="no" >
+            <pre class="prettyprint lang-python" style=" font-size: xx-small;  font-family:cas ;border: rgb(52, 52, 52) solid 2px; width: 80vw;" translate="no" >
 import numpy as np
 import matplotlib.pyplot as plt
 base=10000
@@ -140,6 +140,8 @@ plt.plot(seq)
 </pre>
         </details>
 </div>
+
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 
 <script>
 function plotGraph() {
