--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
             nextLetter = "#404";
             break;
         default:
-            nextLetter = "#404"; // Reset to "a" if unknown letter
+            nextLetter = "#404"; 
         }
     
         span.textContent = nextLetter;
