--- a/fg2.html
+++ b/fg2.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="assets/font.svg" type="image/png">
 
-<title>Fonts Gallery</title>
+<title>fonts studio</title>
 <style>
 @import url(https://db.onlinewebfonts.com/c/1058bc9f019dd38b7c08014b7d82b017?family=Sneak-Regular);
 @import url(https://db.onlinewebfonts.com/c/88f10bf18a36407ef36bf30bc25a3618?family=SuisseIntl-Regular);
@@ -131,7 +131,7 @@
 </style>
 </head>
 <body>
-<p style="font-size: xx-large; font-family: sig;">Fonts Gallery</p> <!-- Title for the gallery -->
+<p style="font-size: xx-large; font-family: sig;">fonts studio</p> <!-- Title for the gallery -->
 
 <div class="gallery">
 
