--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 </div>
 
 <p><a href="proj.html">projects></a><br>
-    <a href="fg2.html">font gallery></a><br>
+    <a href="gall.html">gallery></a><br>
+    <a href="fg2.html">font studio></a><br>
     <a href="sm.html" title="Eye of God">site map></a>
 
     <!-- <a href="https://aqmn.github.io/guess">fun></a><br> -->
