--- a/getip.html
+++ b/getip.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Getting Clients IP</title>
-    <style>
-
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ip demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
     <script>
@@ -21,11 +19,10 @@
     </script>
 </head>
 
-<body>
+<body style="margin-top: 40vh;">
     <center>
-        <p style="font-size: xx-large;">Public IP Address of user is:</p>
+        <p style="font-size: x-large;">your public ip address is:</p>
         <p style="color: green;" id="gfg"></p>
     </center>
 </body>
-
 </html>
