--- a/input.html
+++ b/input.html
@@ -25,7 +25,7 @@ single file:
 &lt;input type=&quot;file&quot;/&gt;
 </pre>
 <hr>
-specified type (image):
+specified format (image):
 <input type="file" accept="image/png, image/jpeg" />
 
 <pre translate="no">
