--- a/gall.html
+++ b/gall.html
@@ -105,49 +105,61 @@ pre:hover{
     </details>
     </div>
     <main>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587383378486-83d683d9d02d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1588395856595-235a6a1ccca8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1587825027984-c4476461c8f9.jpg"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1588503391289-5f7b28258022.jpg"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1586603234056-2158d916b705.jpg"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587462829651-7fd0208d766e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585652505968-6266ecf26133?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586450463118-8d0cddab713f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587993988198-a3d05e119eb0?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587750059642-d55dfc265acd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586692283466-6e08f395f627?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586796105950-b885786d8597?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587169544748-d21bd810f57e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586943101559-4cdcf86a6f87?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586767451503-204b55047cb2?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586754102101-36b67e4c5bcf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585791022456-be89ddf09c75?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587063749684-d4926a4fc233?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586695940356-4b1c61eabbc7?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587151711096-23c51f92c920?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587068786187-db37681155f8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585841960320-f70aa9b7da69?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586968099622-45379e907f32?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1588046883141-44883b3c0f15?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587061966530-a50125ba8512?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587061966530-a50125ba8512?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/125/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/121/800/1200"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/1251/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/160/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/107/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/182/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/180/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/112/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/195/1200/800"></figure>
-      <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/111/1200/800"></figure>
-    </main>
+<!-- <figure><img onlick="window.open(this.src, '_blank');" src=".\pics\43F38D57-70EB-4515-A522-903B694E21D8.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\A99F7FFB-B1A2-4F10-83EB-D32D03AC1BF4.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_2879.JPG"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_5817.JPG"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_6286.JPG"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\Photo_7012496_DJI_144_jpg_4570431_0_202416164926_photo_original.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_5696.PNG"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_5702.JPG"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src=".\pics\IMG_5703.JPG"></figure>   -->
+
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587383378486-83d683d9d02d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1588395856595-235a6a1ccca8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1587825027984-c4476461c8f9.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1588503391289-5f7b28258022.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/photo-1586603234056-2158d916b705.jpg"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587462829651-7fd0208d766e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585652505968-6266ecf26133?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586450463118-8d0cddab713f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587993988198-a3d05e119eb0?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587750059642-d55dfc265acd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586692283466-6e08f395f627?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586796105950-b885786d8597?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587169544748-d21bd810f57e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586943101559-4cdcf86a6f87?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586767451503-204b55047cb2?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586754102101-36b67e4c5bcf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585791022456-be89ddf09c75?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+
+<!-- <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587063749684-d4926a4fc233?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586695940356-4b1c61eabbc7?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587151711096-23c51f92c920?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587068786187-db37681155f8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1585841960320-f70aa9b7da69?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1586968099622-45379e907f32?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1588046883141-44883b3c0f15?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587061966530-a50125ba8512?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587061966530-a50125ba8512?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/125/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/121/800/1200"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/1251/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/160/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/107/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/182/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/180/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/112/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/195/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/111/1200/800"></figure> -->
+</main>
 
 <center>
-<span style="font-size: xx-large;">&vellip;</span>
+<!-- <span style="font-size: xx-large;">&vellip;</span> -->
 </center>
 <pre style="font-size: 5px; margin-top: 10vh;">
 (C) Lingyu Zhou
+Photos from <a href="https://unsplash.com">Unsplash</a>
 dd3cc191-5bd0-42a4-a88f-a55d65cb240c
 </pre>
 </body>
