--- a/gall.html
+++ b/gall.html
@@ -95,13 +95,23 @@ pre:hover{
   }
 
 }
+
+/* details > summary {
+    list-style-type: none;
+}
+
+details> summary::-webkit-details-marker {
+    display: none;
+} */
+
     </style>
 </head>
 <body style="background-color: white;">
     <div class="ft" style="position: fixed; top:5%; z-index: 9999; font-size: xx-large; mix-blend-mode: difference;color:white">
-    <details>
+    <details open>
         <summary style="cursor: nw-resize;">gallery</summary>
         <div style="font-size: small; width: 75vw;">fusion of modern arts and minimalism.</div>
+        <div onclick="history.back()" style="font-size: small; width: 75vw; cursor:pointer">&lt;back</div>
     </details>
     </div>
     <main>
@@ -144,7 +154,7 @@ pre:hover{
 <figure><img onlick="window.open(this.src, '_blank');" src="https://images.unsplash.com/photo-1587061966530-a50125ba8512?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ"></figure>
 <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/125/1200/800"></figure>
 <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/121/800/1200"></figure>
-<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/1251/1200/800"></figure>
+<figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/199/1200/800"></figure>
 <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/160/1200/800"></figure>
 <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/107/1200/800"></figure>
 <figure><img onlick="window.open(this.src, '_blank');" src="https://picsum.photos/seed/182/1200/800"></figure>
