--- a/api.html
+++ b/api.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>apis</title>
 <style>
+    html,body{
+        line-height: 1.5;
+    }
     h1,h2,h3,h4,h5{font-weight: normal; margin:2vh 0px 0px; border-top: 1.5px solid grey;}
     h1::before{
         content: "# ";
